--- a/src/incentive/IncentiveManager.form
+++ b/src/incentive/IncentiveManager.form
@@ -337,7 +337,7 @@
                   <text value="Clear All"/>
                 </properties>
               </component>
-              <component id="fb31f" class="javax.swing.JComboBox" binding="categoryComboBox" custom-create="true">
+              <component id="fb31f" class="javax.swing.JComboBox" binding="categoryComboBox">
                 <constraints>
                   <grid row="1" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
